added changed to jupyter

--- a/multi_dim_hw1.ipynb
+++ b/multi_dim_hw1.ipynb
@@ -1105,6 +1105,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Indeed we see that the eigenvectors are orthogonal and their dot prodoct equals to 0"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "metadata": {},
@@ -1252,6 +1259,13 @@
     "ax.add_artist(legend2)\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### it's a bit hard to see it in the jupiter but the data is separated pretty good with the labels using the PC1,2,3"
    ]
   },
   {
@@ -1441,17 +1455,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### PC3 & PC4 have black line around them for easier identification "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### For PC3 the most contributing features are: 10 & 16 with positive contribution and we see that feature 12,14,15 have some negative contibution\n",
     "\n",
     "### For PC4 the most contributing features are: 9 with positive contribution and 16 with negative contibution"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
